[tool.poetry]
name = "understory.cloud"
version = "0.0.4"
description = "Map of canopy services"
authors = ["Angelo Gladding <angelo@ragt.ag>"]
license = "AGPL-3.0-or-later"
repository = "https://understory.cloud/understory.cloud.git"

[tool.poetry.dependencies]
python = "^3.9,<3.10"
understory = "^0"
understory-indieauth-client = "^0.0.4"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
ipython = "^7.25.0"
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
pep8-naming = "^0.12.0"
radon = "^5.1.0"
understory = {path = "../understory"}
understory-indieauth-client = {path = "../understory-indieauth-client"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
